TINY-2325: Fixed checkbox outlines being hidden due to it overflowing

--- a/src/less/theme/common/checkbox/checkbox.less
+++ b/src/less/theme/common/checkbox/checkbox.less
@@ -5,7 +5,7 @@
 @checkbox-unselected-color: contrast(@background-color, fade(@color-black, 30%), fade(@color-white, 20%));
 @checkbox-selected-color: @color-tint;
 @checkbox-indeterminate-color: @checkbox-selected-color;
-@checkbox-focus-box-shadow: 0 0 0 1px @button-background-color;
+@checkbox-focus-box-shadow: inset 0 0 0 1px @button-background-color;
 @checkbox-focus-border-radius: @control-border-radius;
 
 .@{prefix} {
